feat(lock): 实现基础分布式锁功能及其注解与自动配置支持
- 新增 CascadeLockAutoConfiguration，自动配置分布式锁相关 Bean
- 新增 CascadeLockProperties，支持分布式锁全局配置参数
- 实现 DefaultLockTemplate，提供编程式分布式锁核心逻辑及多种锁策略支持
- 创建 DistributedLock 注解，支持方法级分布式锁声明与参数配置
- 实现 DistributedLockAspect，实现注解锁的切面处理及调用拦截
- 提供 LockFactory，基于 RedissonClient 创建各种锁类型实例
- 完善 LockInfo、LockResult 模型类，封装锁相关数据与执行结果
- 定义 LockType、LockStrategy 枚举，支持多种锁类型和失败策略
- 编写单元测试覆盖 DefaultLockTemplate、LockFactory、DistributedLockAspect
- 新增键生成器接口 KeyGenerator 及默认实现 SpelKeyGenerator，支持SpEL表达式解析用户定义锁键
- 实现锁执行器 LockExecutor 及默认 RedissonLockExecutor，封装锁执行逻辑与事件监听处理
- 完善异常处理，增加 LockException，以支持业务异常准确捕获和反馈
- 采用Spring Boot条件注解和自动装配策略，支持分布式锁按需启用与集成Redisson依赖环境